@@ -100,7 +100,7 @@ Conditionals=
 DebugSourceDirs=
 UsePackages=0
 [Parameters]
-RunParams=/nocompile /proto ..\conv\proto_http /src ..\conv\demo1 /x:XxmSourcePath D:\Data\xxm\Delphi "..\demo2\03 Data MongoDB"
+RunParams=..\tx\txSQLite
 HostApplication=
 Launcher=
 UseLauncher=0
@@ -110,8 +110,8 @@ IncludeVerInfo=1
 AutoIncBuild=0
 MajorVer=1
 MinorVer=2
-Release=0
-Build=325
+Release=2
+Build=350
 Debug=0
 PreRelease=0
 Special=0
@@ -122,7 +122,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=xxm Conversion Utility
-FileVersion=1.2.0.325
+FileVersion=1.2.2.350
 InternalName=xxmConv
 LegalCopyright=
 LegalTrademarks=
