@@ -3,6 +3,7 @@ v1.2.2.???
 - LoadCopy by library file signature to avoid multiple copies being loaded
 - default xxmSession on TStringList (sorted!) instead of TObjectList
 - xxmHttp: support basic authentication (401, "WWW-Authenticate: Basic")
+- parser: in code, treat lines that start with "<" and end with ">" as HTML
 
 v1.2.1.337
 - xxmHttp: IPv6 support
